--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -85,47 +84,59 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="profile">
-            <img src="https://tangerin.vteximg.com.br/arquivos/ids/161979/Shopito-Klabin_Prancheta.png?v=638076940353030000" alt="Logo">
-            <h1>SPXOWNFLEET <br>ARTUR ALVIM</h1>
-            <p class="description">Acesso Rápido a Informações</p>
-        </div>
-
-        <div class="link-group">
-            <p>Como Realizar Acareação</p>
-            <a href="https://drive.google.com/file/d/1ckFvkXt8xOqfQ4vxQI3nL5EfHLHVvOft/view?usp=sharing" target="_blank">Acesse aqui</a>
-        </div>
-
-        <div class="link-group">
-            <p>Como fazer PNR</p>
-            <a href="https://drive.google.com/file/d/1NtJlhYeUzH7v20AxozLjKfmBNCSsoXvB/view?usp=sharing" target="_blank">Acesse aqui</a>
-        </div>
-
-        <div class="link-group">
-            <p>Como dar baixa como entregue</p>
-            <a href="https://drive.google.com/file/d/12wTYvTbC38oSznL-jfMHLx8N3kvpiaUL/view?usp=sharing" target="_blank">Acesse aqui</a>
-        </div>
-
-        <div class="link-group">
-            <p>Mapa do app driver</p>
-            <a href="https://drive.google.com/file/d/1HfBZFNSNIO5VLlZxu3z382TLaouwNosV/view?usp=sharing" target="_blank">Acesse aqui</a>
-        </div>
-
-        <div class="link-group">
-            <p>Como dar ocorrência</p>
-            <a href="https://drive.google.com/file/d/13e1yDbtZ41JUoj7FNKJwVYPuVwwWCnpf/view?usp=sharing" target="_blank">Acesse aqui</a>
-        </div>
-
-        <div class="link-group">
-            <p>Reconhecimento Facial</p>
-            <a href="https://drive.google.com/file/d/12SxZMzcaGzZNpG3XK-VyMzCAjKCL92F4/view?usp=sharing" target="_blank">Acesse aqui</a>
-        </div>
-
-        <div class="link-group">
-            <p>Nota Fiscal</p>
-            <a href="https://drive.google.com/file/d/1xEn2g3Iib-46Qo9_Hjsyj84Cuql9gp7i/view?usp=sharing" target="_blank">Acesse aqui</a>
-        </div>
+  <div class="container">
+    <div class="profile">
+        <img src="https://tangerin.vteximg.com.br/arquivos/ids/161979/Shopito-Klabin_Prancheta.png?v=638076940353030000" alt="Sua Foto">
+        <h1>FROTA PRÓPRIA HUB JD. ADRIANA</h1>
+        <p class="description">Acesso Rápido a informações</p>
     </div>
+
+    <div class="link-group">
+        <p class="link-title">Como Realizar Acareação</p>
+        <a href="https://drive.google.com/file/d/1lJZkqO9ano15ecO2Tp-c7qy1g4qpDiMr/view?usp=drive_link" target="_blank">Acesse aqui</a>
+    </div>
+
+    <div class="link-group">
+        <p class="link-title">Como fazer PNR</p>
+        <a href="https://drive.google.com/file/d/1IizIjkHjTQ6kkNxSV2yHk0jc_wfJBRO-/view?usp=drive_link" target="_blank">Acesse aqui</a>
+    </div>
+
+    <div class="link-group">
+      <p class="link-title"> Procedimento de Acareação - PNR </p>
+      <a href="textopnr.html">Acesse aqui</a>
+    </div>
+
+    <div class="link-group">
+        <p class="link-title">Como dar baixa como entregue</p>
+        <a href="https://drive.google.com/file/d/1qjQTJ8KDQjPzUCgcMM-8VMMvrJglCpMu/view?usp=drive_link" target="_blank">Acesse aqui</a>
+    </div>
+
+    <div class="link-group">
+        <p class="link-title">Mapa do app driver</p>
+        <a href="https://drive.google.com/file/d/1-Jny3cU3DjCZK2Mk9rAbqpsn5YFXkGJX/view?usp=drive_link" target="_blank">Acesse aqui</a>
+    </div>
+
+    <div class="link-group">
+        <p class="link-title">Como dar ocorrência</p>
+        <a href="https://drive.google.com/file/d/1-dSLMbCWVIzHAIUzdJy8FCXXQvQ0xAqx/view?usp=drive_link" target="_blank">Acesse aqui</a>
+    </div>
+
+    <div class="link-group">
+        <p class="link-title">Reconhecimento Facial</p>
+        <a href="https://drive.google.com/file/d/1x9Hfkxuorj8GtZo0MDGfhLYiLQplgoEK/view?usp=drive_link" target="_blank">Acesse aqui</a>
+    </div>
+
+    <div class="link-group">
+        <p class="link-title">Nota Fiscal</p>
+        <a href="https://drive.google.com/file/d/1hFtjrHLozp_uKu_3Aq4sefxnU8eheiln/view?usp=sharing" target="_blank">Acesse aqui</a>
+    </div>
+
+    <div class="link-group">
+      <p class="link-title">Texto para PNR</p>
+      <a href="textopnr.html" target="_blank">Acesse aqui</a>
+  </div>
+
+    
+</div>
 </body>
 </html>
