--- a/textopnr.html
+++ b/textopnr.html
@@ -96,7 +96,7 @@
 
         <p><strong>Pessoal, acho de extrema importância essa dica sobre PNR</strong></p>
 
-        <p><strong>Duvidas:</strong>, O cliente me bloqueou no WhatsApp. O que eu faço?</p>
+        <p><strong>Duvidas:</strong> O cliente me bloqueou no WhatsApp. O que eu faço?</p>
 
         <p>Um print do <strong>WhatsApp</strong> mostrando que o cliente te bloqueou, encaminhe no <strong>App</strong> essa <strong>conversa</strong>. Vá até a <strong>casa</strong> do cliente, <strong>não</strong> precisa chamar o cliente, com a <strong>geolocalização</strong> ligada e tire uma foto da fachada.</p>
 
